# nestvim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  commitlint.config.js  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.github/: config.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  dependency-review.yml  flake-lock-update.yml  pr-title.yml  release.yml  update-rust.yml
.omc/: project-memory.json
.omc/sessions/: 1c385992-1b43-4a1d-b2ab-af85fe4b7009.json
docs/: keybindings.md  keymap-emacs.md  keymap-vim.md  release-checklist.md
scripts/: check-treesitter.ts
src/: buffer.rs  buffer.ts  editor.rs  editor.ts  lib.rs  main.rs  main.ts  register.rs  renderer.rs  renderer.ts  terminal.rs  terminal.ts  types.rs  types.ts  undo.rs
src/highlight/: detector.rs  detector.ts  highlighter.rs  highlighter.ts  mod.rs  theme.ts  types.ts
src/highlight/languages/: index.ts
src/keymap/: emacs.rs  mod.rs  vim.rs
src/plugin/: api.rs  api.ts  commands.ts  events.ts  interface.rs  keymaps.ts  manager.rs  manager.ts  mod.rs  types.ts
src/plugin/loaders/: javascript.rs  lisp.rs  lua.rs  lua.ts  mod.rs  nix.rs  rust.rs  typescript.ts
src/plugins/: hello.lisp  hello.lua  hello.ts
tests/: editor_flow.rs
