[package]
name = "nestvim"
version = "0.1.0"
edition = "2021"
description = "A minimal Vim-like TUI editor written in Rust"
authors = ["NazoVim-org"]
license = "MIT"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
ropey = "1.6"
syntect = { version = "5.3", default-features = false, features = ["default-fancy", "parsing", "html", "yaml-load", "dump-load"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rust_lisp = "0.18"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
libloading = "0.8"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
arboard = "3"
quickjs-rusty = "0.11"

[profile.release]
lto = true
codegen-units = 1
